objects/CMPL123CME__MedDRA_Link_Investigation__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Investigation_Evaluation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Investigation or Evaluation</description>
        <inlineHelpText>Investigation or Evaluation</inlineHelpText>
        <label>Investigation/Evaluation</label>
        <referenceTo>CMPL123CME__Investigation__c</referenceTo>
        <relationshipLabel>MedDRA Link Investigation</relationshipLabel>
        <relationshipName>MedDRA_Link_Investigation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_code__c</fullName>
        <description>8-digit code to identify the High Level Group Term</description>
        <inlineHelpText>8-digit code to identify the High Level Group Term</inlineHelpText>
        <label>HLGT Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlgt_name__c</fullName>
        <description>Full name of the High Level Group Term</description>
        <inlineHelpText>Full name of the High Level Group Term</inlineHelpText>
        <label>HLGT Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlt_code__c</fullName>
        <description>High Level Term Code</description>
        <inlineHelpText>High Level Term Code</inlineHelpText>
        <label>HLT Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlt_name__c</fullName>
        <description>Full name of the High Level Term</description>
        <inlineHelpText>Full name of the High Level Term</inlineHelpText>
        <label>HLT Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__meddra_history__c</fullName>
        <description>MedDRA History/Version</description>
        <inlineHelpText>MedDRA History/Version</inlineHelpText>
        <label>MedDRA History</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_code__c</fullName>
        <description>Preferred Term Code</description>
        <inlineHelpText>Preferred Term Code</inlineHelpText>
        <label>PT Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__pt_name__c</fullName>
        <description>Full name of the Preferred Term</description>
        <inlineHelpText>Full name of the Preferred Term</inlineHelpText>
        <label>PT Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_code__c</fullName>
        <description>8-digit code to identify the System Organ Class</description>
        <inlineHelpText>8-digit code to identify the System Organ Class</inlineHelpText>
        <label>SOC Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_name__c</fullName>
        <description>Full name of the System Organ Class</description>
        <inlineHelpText>Full name of the System Organ Class</inlineHelpText>
        <label>SOC Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>MedDRA Link Investigation</label>
    <nameField>
        <label>MedDRA Link Investigation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA Link Investigation</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>